ags (3.11.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved ags-fx-vst3 by initializing default with stereo arrangement

ags (3.11.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed compilation error if vst3 disabled
	* fixed restore from XML with vst3 bridges

ags (3.11.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed use ags_vst_funknown_release() instead of ags_vst_icomponent_destroy()
	* fixed missing call AgsVst3Plugin:plugin_exit()
	* minor improvements

ags (3.11.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsWriteVst3Port task
	* implemented AgsInstantiateVst3Plugin task
	* refactored ags-fx-vst3 to improve parallelism with VST3
	* minor improvements

ags (3.10.18)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed playback of ags-fx-vst3

ags (3.10.17)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved loading plugins from main thread

ags (3.10.16)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed 2 dead-locks with ags-fx-vst3
	* minor improvements

ags (3.10.15)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved build compile libags_vst.so with -Wall -Wformat -Werror=format-security -Werror=return-type -Werror=uninitialized -Werror=maybe-uninitialized
	* improved build additional LIBAGS*_CPPFLAGS and LIBGSEQUENCER_CPPFLAGS

ags (3.10.14)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* remove libags_vst.la dependency from gtkdoc

ags (3.10.13)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed linker errors of libgsequencer.so if VST3 is disabled

ags (3.10.12)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsVst3PluginBrowser

ags (3.10.11)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed host context
	* implemented VST3 fallback of loading IEditController by query interface
